wip serving reports via ajax

--- a/package.json
+++ b/package.json
@@ -2,13 +2,10 @@
   "name": "wp-db-analyzer",
   "version": "1.0",
   "description": "WordPress Database Analyzer Plugin",
-  "main": "index.js",
-  "scripts": {
-  },
-  "dependencies": {
-  },
-  "devDependencies": {
-  },
-  "author": "",
+  "author": "Joel Masci <masci.joel@gmail.com>",
+  "private": true,
+  "scripts": {},
+  "dependencies": {},
+  "devDependencies": {},
   "license": "GPLv2"
 }
