wip, almost works with matrix/table moved into their own packages

--- a/package.json
+++ b/package.json
@@ -6,6 +6,5 @@
   "private": true,
   "scripts": {},
   "dependencies": {},
-  "devDependencies": {},
-  "license": "GPLv2"
+  "devDependencies": {}
 }
